--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Generate directory listing
+        uses: romw314/github-pages-directory-listing@2ba3179736f713e02b939abda432a628b5b0d843
       - name: Add GreenAcidPipe/RedGas files
         run: |
           mkdir -p ".$REDGAS_PATH"
